# wheretopark

./: .gitignore  .pylintrc  LICENSE  Milestone and Tasks Distribution  README.md  environment.yml  pylintrc  pyproject.toml  where2park1.0.ipynb
.github/workflows/: test.yml
data/: geojson_exploration.ipynb  occupancy-geojson-tejal.ipynb  transaction-geojson-tejal.ipynb
doc/: Component Specification.md  Components.md  Functional Specification.md  Milestones and Tasks  Milestones and Tasks.md  UseCases.md  UserStories.md
examples/: Consumer.md
searchTool/: .coveragerc  app.py  df_paid.pkl  flask_test.csv  forms.py  map_plot.py  result.pkl  search_place.py  test.py
searchTool/Utils/: __init__.py  map_plot.py  search_place.py
searchTool/searchTool/: __init__.py  app.py  distance.py  forms.py  map_plot.py  result.pkl  search_place.py
searchTool/searchTool/static/: hello.css
searchTool/searchTool/templates/: charts.html  hello.html  selected.html
searchTool/templates/: _formhelper.html  selected.html
searchTool/tests/: test_wheretopark.py
wheretopark/: app.py  result.pkl
wheretopark/Utils/: config.py  distance.py  map_plot.py  result.pkl  search_place.py
wheretopark/tests/: test_wheretopark.py
